--- a/Tugas1/Tugas1.ipynb
+++ b/Tugas1/Tugas1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
     "\n",
     "\n",
     "# Konfigurasi API YouTube\n",
-    "API_KEY = \"AIzaSyAJQ7Sph0crKZWTdsgASKrx0yhc8E9nBHk\"  # Ganti dengan API Key kamu\n",
+    "API_KEY = \"_your_api_key\"  # Ganti dengan API Key kamu\n",
     "VIDEO_ID = \"NYH6Oa4PXlY\"  # Ganti dengan ID video YouTube yang diinginkan"
    ]
   },
